Latest commit on home page

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -10,7 +10,7 @@
       <div class="card mt-4" style="background:#4DD0E1">
           <i class="ri-lightbulb-line"></i>
           <div class="card-body">
-          <h5 class="card-title">Today Motivation</h5>
+          <h5 class="card-title">Daily Motivation</h5>
               <p class="card-text">{{ quote_obj }}</p>
           </div>
       </div>
